Array.prototype.toLocaleString visits elements in wrong order under certain conditions https://bugs.webkit.org/show_bug.cgi?id=80663

Reviewed by Michael Saboff.

The bug here is actually that we're continuing to process the array after an exception
has been thrown, and that the second value throw is overriding the first.

Source/JavaScriptCore:

* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncToLocaleString):

LayoutTests:

* fast/js/array-prototype-properties-expected.txt:
* fast/js/script-tests/array-prototype-properties.js:



Canonical link: https://commits.webkit.org/97944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110352 268f45cc-cd09-0410-ab3c-d52691b4dbfc